--- a/minimax.tex
+++ b/minimax.tex
@@ -85,6 +85,7 @@ converge quickly to a near-optimal alternative. Finally, we analyze these strate
 \end{abstract}
 
 \section{Introduction}
+\commentOC{Remaining refs to appendix. Describe what is there. data set VS dataset.}
 Aggregation of preference information is a central task in many computer systems (recommender systems, search engines, etc).
 In many situations, such as in group recommender systems, the goal is to find a consensus choice;
 social choice theory can provide foundations for such applications
@@ -105,7 +106,7 @@ one early work is  by \Citet{Conitzer2005} who studied the complexity of communi
 additional complexity results were given by \citet{Walsh2007} and \citet{Pini2007}.
 %\citep{Walsh2007} showed that the general case remains computationally hard even when restricting to single-peaked preferences;  sufficient conditions that ensure tractability were then found \citep{Pini2007}.
 
-Since in many practical situations there would be too many possible winners but no necessary winners, several works addressed the problem of agent preferences elicitation using a variety of approaches (minimax regret, Bayesian methods, etc.) with the goal of converging to a necessary winner \citep{Naamani-Dery2015,Kalech2011,Lu2011,Pini2009,Benabbou2016,Dey2016,Dey2016_2}. Among those, \citep{Walsh2009,Conitzer2009} analyzed when to stop the elicitation process.
+Since in many practical situations there would be too many possible winners but no necessary winners, several works addressed the problem of agent preferences elicitation using a variety of approaches (minimax regret, Bayesian methods, etc.) with the goal of converging to a necessary winner \citep{Naamani-Dery2015,Kalech2011,Lu2011,Pini2009,Benabbou2016,Dey2016,Dey2016_2}. Among those, \citet{Walsh2009,Conitzer2009} analyzed when to stop the elicitation process.
 
 A second concern is the ability of the chair (the person or organization supervising the voting process) to provide a precise definition of the voting rule, suggesting the relaxation of the second hypothesis. Indeed, it is often difficult for non-experts to formalize a voting rule on the basis of some generic preferences over a desired aggregation method. 
 %Thus, the first hypothesis should also be relaxed. 
