More precise ref

--- a/minimax.tex
+++ b/minimax.tex
@@ -279,9 +279,9 @@ In particular, we want to obtain constraints of the type $w_{r} - w_{r+1} \geq \
 
 \paragraph{Building concrete questions for the chair}
 Even if the chair might be considered able to answer directly such abstract questions, we want to ensure that these questions can also, in principle, be asked in a more concrete way: in terms of winners of example profiles. Such questions have precise semantics whose understanding can be assumed to be shared by the chair, contrary to abstract questions about weights. 
-Moreover, this way of questioning the chair is independent of the voting rule that is being elicited. Asking questions about weights only works when a scoring rule is being considered.
+Moreover, this way of questioning the chair is independent of the voting rule that is being elicited. Questions about weights only make sense when considering PSRs.
 Asking who should win in specific profiles has been used in experimental settings investigating the feeling of justice of individuals \citep{Giritligil2005}, but, to the best of our knowledge, the use of such questions to systematically guide an elicitation process about voting rules is novel. 
-This is similar to favor, in decision theory, direct choice questions ("please choose either a or b") compared to questioning the decision maker about the shape of her utility function. The former are considered “observable”: acts of choice are translated to preference statements \citep{colell_microeconomic_1995}. 
+This is similar to favor, in decision theory, direct choice questions ("please choose either a or b") compared to questioning the decision maker about the shape of her utility function. The former are considered “observable”: acts of choice are translated to preference statements \citep[Ch.\ 1]{colell_microeconomic_1995}. 
 
 Thus, our task is to build a profile, given $\lambda$ and $r ≤ m-2$, in such a way that the set of (tied) winners picked by the chair reveals whether $w_{r} - w_{r+1} \geq \lambda (w_{r+1} - w_{r+2})$.
 \begin{proposition}\label{prop:chairQuestions}
