Let LaTeX do the positioning

--- a/minimax.tex
+++ b/minimax.tex
@@ -742,7 +742,7 @@ The penalty parameters for the Pessimistic and Extended pessimistic strategies a
 \end{proof*}
 
 \sisetup{table-number-alignment = center, table-figures-integer=2, table-figures-decimal=1, table-auto-round}
-\begin{table}[ht]
+\begin{table}
 	\caption{Average MMR in problems of size $(10, 20)$ after $k$ questions.}
 	\label{tab:biggerSize}
 	\begin{tabular}{S[table-figures-integer=3, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
