--- a/minimax.tex
+++ b/minimax.tex
@@ -86,7 +86,7 @@ converge quickly to a near-optimal alternative. Finally, we analyze these strate
 \end{abstract}
 
 \section{Introduction}
-\commentOC{Remaining refs to appendix. Describe what is there. data set VS dataset. Figure 2. Footnotes. Comments. Talk about small settings?}
+\commentOC{Remaining refs to appendix. Describe what is there.}
 \commentPV{If we have space (can save by formatting the itemize at the end of experiments as text), show Regret and PMR formulas as displaymath}
 Aggregation of preference information is a central task in many computer systems (recommender systems, search engines, etc).
 In many situations, such as in group recommender systems, the goal is to find a consensus choice;
@@ -130,27 +130,22 @@ While some previous works have considered partially specified aggregation method
 %a  partially defined voting rule.
 %While previous works have considered either partial information about the agent preferences or a partially specified aggregation method, we do not know of any work considering both sources of uncertainty at the same time.
 Actually, very few works altogether have considered the problem of eliciting a voting rule by asking questions to the chair. We mention the work of \Citet{Cailloux2014} that assumes a different representation for the rule. %we mention the work of \Citet{Cailloux2014} considering elicitation the voting rule by assuming a specific representation.
-
 %A classic paper is the one by \citet{Stein1994} that, considering scoring rules, identified dominance relations between alternatives; these relations allow to determine pairs of alternatives where the first is at least as good as the second no matter which weights are chosen among a generic class of weights (decreasing weighs or convex decreasing weights).
 %More recent articles considered the problem of dealing with unspecified weights in positional scoring rules: \citet{Llamazares2013} proposed a method based on Data Envelopment Analysis (DEA), while \citet{Viappiani2018} proposed to aggregate the uncertainty in weights using criteria used in decision-making under uncertainty (such as minimax regret). 
 % provided an elicitation framework for a different class of rules.
-
 Additionally, some works address the manipulability of voting rules \citep{Elkind2012,Dey2018,Dey2018_2,Conitzer2011,Baumeister2019} and 
 strategic behaviors \citep{Endriss2016,Lev2019,Annemieke2012}.
 
-Our approach is evaluated on simulations with synthetic and real datasets where both the voting rule and the agent preferences are initially unknown to the system and incrementally revealed through questioning.
-We compare the effectiveness of several questioning strategies based on the current knowledge of the rule and preferences.
-\commentBN{on small sizes because we assume humans}
-\commentBN{remove bullets and restore PMR}
-\begin{itemize}
-	\item we provide a novel mechanism for eliciting a voting rule by translating abstract questions about weights to a choice of an alternative given a concrete profile;  
-	\item we showed that with our elicitation method %in small problem sizes, %starting with zero knowledge,
-	it is possible to reach low regret with a reasonable number of questions;
-	\item the elicitation strategies that we provide, in particular Pessimistic, achieve good results within reasonable computation time; %for small problem sizes;
-	\item we showed that for the class of rule considered, asking a few questions to the chair suffice to reach low regret;
-	\item our experiments suggest that low degree of similarity among preferences %rankings 
-	(as in impartial culture) is a more challenging setting than less varied profiles.
-\end{itemize}
+Our approach is evaluated on simulations with synthetic and real datasets where both the voting rule and the agent preferences are initially unknown to the system and incrementally revealed through questioning. We assume the chair to be human, thus able to answer questions about a limited number of alternatives, so we focus on small scale social choice situations. We compare the effectiveness of several questioning strategies based on the current knowledge of the rule and preferences. To summarize our contributions: 1) we provide a novel mechanism for eliciting a voting rule by translating abstract questions about weights to a choice of an alternative given a concrete profile; 2) we show that with our elicitation method it is possible to reach low regret with a reasonable number of questions; 3) we present elicitation strategies that achieve good results within reasonable computation time; 4) we show that for the class of rule considered, asking a few questions to the chair suffice to reach low regret; 5) our experiments suggest that low degree of similarity among preferences (as in impartial culture) is a more challenging setting than less varied profiles.
+%\begin{itemize}
+%	\item we provide a novel mechanism for eliciting a voting rule by translating abstract questions about weights to a choice of an alternative given a concrete profile;  
+%	\item we showed that with our elicitation method %in small problem sizes, %starting with zero knowledge,
+%	it is possible to reach low regret with a reasonable number of questions;
+%	\item the elicitation strategies that we provide, in particular Pessimistic, achieve good results within reasonable computation time; %for small problem sizes;
+%	\item we showed that for the class of rule considered, asking a few questions to the chair suffice to reach low regret;
+%	\item our experiments suggest that low degree of similarity among preferences %rankings 
+%	(as in impartial culture) is a more challenging setting than less varied profiles.
+%\end{itemize}
 
 \section{Social choice with partial information}
 \label{sec:background}
@@ -346,16 +341,14 @@ The strategy selects among these $n + m - 2$ candidate questions one that leads 
 	and $R^{\min}_1 = \min\set{\MMR(\pprofile_1, W_1), \MMR(\pprofile'_1, W'_1)} \epsilon_{t} + \epsilon'_{t}$.
 	%If $(\pprofile_1, W_1) ≥ (\pprofile'_1, W'_1)$, define $\MMR^{\max} = \MMR(\pprofile_1, W_1)$ and $\MMR^{\min} = \MMR(\pprofile'_1, W'_1)$; otherwise, define $\MMR^{\max} = \MMR(\pprofile'_1, W'_1)$ and $\MMR^{\min} = \MMR(\pprofile_1, W_1)$.
 	% and and $(\pprofile^\min_2, W^\min_2)$. numbering them so that $\MMR(\pprofile_1, W_1) ≥ \MMR(\pprofile_2, W_2)$. Then the badness of the question in the worst case is:
-	The terms $\epsilon_t$ and $\epsilon'_{t}$ are real numbers associated to the type $t$ of question; these parameters are determined experimentally and used to fine control the choice of the question type.
+	The terms $\epsilon_t$ and $\epsilon'_{t}$ are real numbers associated to the type $t$ of question; these parameters are determined experimentally and used to fine control the choice of the question type. 
 	Define similarly $t_2$, $R^{\max}_2$ and $R^{\min}_2$ for  $q_2$.
 	%We are now faced with the problem of aggregating these values in order to compare the informative values of the candidate questions.  \footnote{We adopt a pessimistic approach, reported to perform better than optimistic aggregation \citep{Cailloux2014}, although Our experiments in this context suggested a weak impact of that choice on the performance of the strategy.}
 	%To avoid the absorption property of the max, we adopt $\leximax$ as an aggregator.
 	Pessimistic considers question $q_1$ to be better  than $q_2$ iff $R^{\max}_1 < R^{\max}_2 \text{ or } [R^{\max}_1 = R^{\max}_2 \text{ and } R^{\min}_1 < R^{\min}_2]$.
 	%This comparison gives a way of picking questions among a set of possible questions, by picking one that minimizes this approximate measure of minimax regret {\em a posteriori}. 
 	%The motivation for using this operator lies in 
-	In other words if the maximal {\em a posteriori} MMR of two questions are (nearly) equal, then it considers the (penalized) minimal MMR values, preferring the question with the lowest value.\footnote{In our tests 
-	%the parameters for Pessimistic and Extended pessimistic are 
-	we set to $\epsilon_{\text{chair}} = 1.1$, $\epsilon'_{\text{chair}} = 10^{-6}$, $\epsilon_{\text{agent}} = 1.0$ and $\epsilon'_{\text{agent}} = 0$.}
+	In other words if the maximal {\em a posteriori} MMR of two questions are (nearly) equal, then it considers the (penalized) minimal MMR values, preferring the question with the lowest value.
 	%(Technically, instead of applying a pure lexicographic aggregation, which is very sensitive to small errors due to floating-point computations, we apply a weighted sum between the maximal and the penalized minimal MMR values, with a predominant weight given to the maximal one, several order of magnitudes higher than the weight given to the penalized minimal MMR.)
 
 
@@ -404,7 +397,7 @@ For the synthetic datasets, we follow an Impartial Culture (IC) assumption: the 
 %independently and all have the same probability of appearing. 
 We believe IC to be a challenging situation and expect the number of questions to ask, in order to reach a certain level of regret, to decrease with less varied profiles.
 %We adopt IC because it is a more challenging situation: as can be expected intuitively , the number of questions to be asked decrease with less varied profiles. 
-To generate the weights of the scoring rule, we first draw $m \!-\! 1$ numbers uniformly at random (in the interval $\intvl{0,1}$ representing weight ``differences''), normalize and sort them; a sequence of convex decreasing weight is then obtained by a decumulative sum.
+To generate the weights of the scoring rule, we first draw $m \!-\! 1$ numbers uniformly at random (in the interval $\intvl{0,1}$ representing weight ``differences''), normalize and sort them; a sequence of convex decreasing weight is then obtained by a decumulative sum. The penalty parameters for the Pessimistic and Extended pessimistic strategies are set to  $\epsilon_{\text{chair}} = 1.1$, $\epsilon'_{\text{chair}} = 10^{-6}$, $\epsilon_{\text{agent}} = 1.0$ and $\epsilon'_{\text{agent}} = 0$.
 
 \begin{figure}
 	\caption{Average MMR in problems of size $(5, 10)$ after $k$ questions.}
@@ -472,9 +465,8 @@ To generate the weights of the scoring rule, we first draw $m \!-\! 1$ numbers u
 Our first experiment concerns small size situations.
 \Cref{fig:smallSize} compares some of our strategies in the case $m = 5, n = 10$ (variations around this size yield similar conclusions), where the results are averaged over $200$ runs.
 %(The figure also displays the performance of the Elitist strategy, to which we will come back.)
-We see that asking random questions does not allow to reach a low regret level even after having asked 100 questions, whereas a low regret level ($\MMR$ = 1) is reached by Pessimistic before having asked 60 questions.
+We see that asking random questions does not allow to reach a low regret level even after having asked 100 questions, whereas a low regret level ($\MMR$ = 1) is reached by Pessimistic before having asked 60 questions. This holds also for different problem sizes. For instance, for $m =10$, $n = 20$ and $400$ questions, Random strategy reaches an average regret (over 10 runs) of $12$ (±$ 0.7$) and Pessimistic $0.6$ (±$ 0.5$).
 We also see that Pessimistic performs slightly better than Extended pessimistic, showing that Pessimistic chooses candidate questions wisely; this is good news since Pessimistic is much faster: it takes on average only $16$s for a complete elicitation session (for $m = 5$, $n = 10$ and $100$ questions), while Extended pessimistic takes $50$s. Although their performance is close, Pessimistic performs systematically better in multiple runs of the experiment.
-\Cref{sec:appendix} provides a problem of larger size.
 
 We also compared the Pessimistic strategy against Elitist in a situation specifically tailored to advantage Elitist. For that experiment specifically, instead of drawing the weights of the oracle randomly, we fix it to a “geometric” weight vector, such that $w_r - w_{r + 1} = 2(w_{r + 1} - w_{r + 2})$, for all $r ≤ m - 2$, so as to dramatically increase the importance of the weights associated to the top ranks. Even in that case, we see in \cref{tab:geometricWeights} that Pessimistic performs better than Elitist.
 
@@ -484,10 +476,11 @@ Our next set of experiments evaluate the Pessimistic strategy in absolute terms.
 We first wonder how many questions should be asked in order to reach low regret. 
 For the scope of the experiment we consider a ``low level'' to be a tenth of the number of agents: such a regret is equivalent to the difference of score of an alternative $x$ that results from switching from a profile $P$ to a profile $P'$ where ten percent of the agents rank $x$ last instead of first.
 The results for various sizes are displayed in \cref{tab:lowRegret}. 
+\commentBN{Either we remove this consideration about n/10 together with \cref{tab:lowRegret}, and we present \cref{tab:questions}. Or we redo \cref{tab:questions} considering the questions needed to reach MMR=n/10 instead of the ones needed to reach 0.}
 
-\commentBN{Replace the following paragraph with real stats on the distribution of questions.}
+
 %For the experiments we performed, we see that the number of questions required to reach a low regret level grows approximately linearly with the number of agents and grows less fast than the square of the number of alternatives. 
-Averaging these data by category of value for $m$, and assuming no questions get asked to the chair, we see that in order to reach a low regret level, each agent will have to answer $5.6$ questions for $m = 5$, $17.2$ questions for $m = 10$ and $27.1$ questions for $m = 15$. These numbers have to be contrasted with the estimated number of questions required to elicit the full preference of an agent which are $6.6$ for $m=5$, $24.8$ for $m=10$ and $48.4$ for $m=15$. To obtain these data, we constrained the Pessimistic strategy to ask questions to the agents only, and ran it on a single agent problem, with various values for $m$.
+%Averaging these data by category of value for $m$, and assuming no questions get asked to the chair, we see that in order to reach a low regret level, each agent will have to answer $5.6$ questions for $m = 5$, $17.2$ questions for $m = 10$ and $27.1$ questions for $m = 15$. These numbers have to be contrasted with the estimated number of questions required to elicit the full preference of an agent which are $6.6$ for $m=5$, $24.8$ for $m=10$ and $48.4$ for $m=15$. To obtain these data, we constrained the Pessimistic strategy to ask questions to the agents only, and ran it on a single agent problem, with various values for $m$.
 
 \begin{table}
 	\caption{Number of questions needed by Pessimistic strategy to reach an MMR of $\frac{n}{10}$ (represented by $k_{\MMR}$), by size.}
@@ -506,6 +499,7 @@ Averaging these data by category of value for $m$, and assuming no questions get
 	\end{tabular}
 \end{table}
 
+
 %\begin{table}
 %	\caption{Number of questions needed by the Pessimistic strategy to elicit the complete preference of one agent.}
 %	\label{tab:fullProfile}
@@ -521,7 +515,7 @@ Averaging these data by category of value for $m$, and assuming no questions get
 %\end{table}
 
 \begin{figure}
-	\caption{Average MMR (normalized by $n$) after $k$ questions with Pessimistic strategy for different data sets.}
+	\caption{Average MMR (normalized by $n$) after $k$ questions with Pessimistic strategy for different datasets.}
 	\label{fig:linearity}
 	\begin{tikzpicture}
 		\pgfplotsset{
@@ -573,67 +567,27 @@ Averaging these data by category of value for $m$, and assuming no questions get
 			\addlegendentry{tshirts m11n30}
 			\addplot[thick, mark=*, mark size = {2}, mark indices = {400}, pink] table [x=k, y=courses]{data/normalizedLin.dat};
 			\addlegendentry{courses m9n146}
-			%\addplot[thick, mark=halfsquare left*, mark size = {2}, mark indices = {200}, blue] table [x=k, y=14.9]{data/normalizedLin.dat};
-			\addplot[thick, mark=halfsquare left*, mark size = {2}, mark indices = {200}, blue] table [x=k, y=14.9]{data/m14n9.dat};
+			\addplot[thick, mark=halfsquare left*, mark size = {2}, mark indices = {200}, blue] table [x=k, y=14.9]{data/normalizedLin.dat};
 			\addlegendentry{m=14, n=9}
 			\addplot[thick, mark=halfsquare right*, mark size = {2}, mark indices = {60}, brown] table [x=k, y=skate]{data/normalizedLin.dat};
 			\addlegendentry{skate m14n9}
 			\addplot[thick, mark=halfsquare*, mark size = {2}, mark indices = {400}, magenta] table [x=k, y=15.30]{data/normalizedLin.dat};
 			\addlegendentry{m=15, n=30}
-			
-			\addplot[thick, mark=halfsquare left*, mark size = {2}, mark indices = {200}, orange] table [x=k, y=14.10]{data/new.dat};
-			\addlegendentry{m=14, n=10}
-			\addplot[thick, mark=halfsquare right*, mark size = {2}, mark indices = {60}, black] table [x=k, y=15.10]{data/new.dat};
-			\addlegendentry{m=15, n=10}
-			\addplot[thick, mark=halfsquare*, mark size = {2}, mark indices = {400}, yellow] table [x=k, y=15.9]{data/new.dat};
-			\addlegendentry{m=15, n=9}
 		\end{axis}
 	\end{tikzpicture}
 \end{figure}
-
-%\begin{table}
-%	\caption{Average number of questions asked to the chair (\textit{qstC}) and to the agents (\textit{qstV}) by Pessimistic strategy to reach zero regret on the data sets of \cref{fig:linearity}.}
-%	\label{tab:questions}
-%	\begin{tabular}{S[table-text-alignment=right] S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]}
-%		\toprule
-%		{data set} & {qstC} & {sd} & {qstV} & {sd} \\
-%		\midrule
-%		m5n10 &		8.4		& 2.67 		& 61		& 6.25\\
-%		m5n20 &		13.6	& 6.38		& 118.9		& 14.4\\
-%		m10n20 &	48.5	 & 6		& 362.4		& 47.6	\\
-%		m10n30 &	56.3	&	11.18	&598.1 		&75.19	\\
-%		m15n30 &	24.5	&8.77		&	775.5	&	8.77	\\
-%		m14n9 &		58.3	&33.66		&370.9		&40.54	\\
-%		m14n9-2 &	56.2	&34.11		&368.7		&	53.07 \\
-%		skate &	0		& 0			&103.3		&2.21	\\
-%		tshirt &	30.0	&	15.87	&	961.2	&	23.04	\\
-%		courses & 0		& 0		&950		&5.08	\\
-%		
-%		\bottomrule
-%	\end{tabular}
-%\end{table}
 
 %We next wonder how fast the regret decreases, measured as a function of the number of questions asked. This is important practically because it may be impossible or undesirable to ask sufficient questions to reach a low regret level.
 %%Knowing the speed of decrease permits to know which trade-offs can be achieved between the quality of the resulting recommendation and the number of questions that participants have to answer. 
 %\Cref{fig:linearity} shows graphically the decrease in MMR according to the number of questions asked for various problem sizes. We see that this function is convex, apart from the very first few questions, indicating %to users of our approach 
 %that, on average, halving the number of questions will only reduce the gain in regret by less than half. %\commentBN{Reviewer: Halving the number of questions reduces the regret by more than 50\%.}
 %At the start of the elicitation, the space of uncertainty is so large that the adversary can attain the maximum possible value of regret; multiple answers are needed to constrain her enough for the MMR to start decreasing. When approaching optimality, the pace of MMR reduction decreases.
+\Cref{fig:linearity} shows graphically the decrease in MMR according to the number of questions asked for various problem sizes. In particular, we can observe, as we expected, that given a problem size, the less the profile is varied the more questions are needed to reach a given MMR. For instance, in the \textit{Skate} dataset the top-2 alternatives are the same for all agents, and 8 out of 9 agents rank the same alternative at position 3; in \textit{Courses} all agents rank the same alternative at the top position, while in \textit{T Shirt} the alternatives are evenly distributed in the preference rankings. If we compare \textit{Skate} with the same size generated problem (m=14, n=9) we see that the former performs much better than the latter, reaching zero regret after only $100$ questions, while the IC needs almost $500$ questions to reach the same result. But if we compare \textit{T Shirt} with the corresponding IC, \commentBN{Do we substitute m=10, n=30 with m=11, n=30 to make it same as T shirt?} we do not observe any important differences in terms of decrease of regret. This suggest that high degree of similarity in the preference rankings helps reducing the regret faster.
 
-In \cref{fig:linearity} we can also observe, as expected, that given a problem size the number of questions needed to reach a given MMR is lower when considering real datasets rather than a synthetic profile generated according to IC. \commentBN{Add the following:}
-Indeed, in the Skate dataset the top-2 alternatives are the same for all agents, and 8 out of 9 agents rank the same alternative at position 3; in Courses  all agents rank the same alternative at the top position,
-while in \textit{T Shirt}  the alternatives are evenly distributed in the preference rankings.
-\commentPV{If are evenly distributed, then doesn't this goes against our argument?}
-%By looking at the data we observe that:
-%\begin{itemize}
-%	\item \textit{Skate} - the top-2 alternatives are the same for all agents, and 8 out of 9 agents rank the same alternative at position 3;
-%	\item \textit{AGH} - all agents rank the same alternative at the top position, different group of agents share the same preference rankings;
-%	\item \textit{T Shirt} - the alternatives are evenly distributed in the preference rankings.
-%\end{itemize}
-%The experiments suggest that high degree of similarity in the preference rankings helps reducing the regret faster.
-% do less harm than halving the gain in regret, on average.
 
 %\subsection{Value of information comparison}
 \paragraph{Comparison with Two Phase}
+
 \begin{table}
 	\caption{Average MMR in problems of size $(10, 20)$ after $400$ questions, among which $q_c$ to the chair.}
 	\label{tab:twoP400}
@@ -655,6 +609,7 @@ while in \textit{T Shirt}  the alternatives are evenly distributed in the prefer
 		\bottomrule
 	\end{tabular}
 \end{table}
+
 The experiments so far let the strategy target its questions unrestrictively, leaving open the possibility of questioning either the chair or an agent at each step. One may wonder what is lost in terms of regret by asking different proportions of questions to the chair and the agents. Such restrictions may be useful because of (partial) unavailability of the chair, or because the estimated cognitive costs may differ sensibly. %, as these types of questions differ in nature. 
 
 \Cref{tab:twoP400} shows the MMR value reached in problems of size $m = 10, n = 20$ after $400$ questions, using the Two phases strategy, in the “ca” (chair then agents) and in the “ac” (agents then chair) variants. These numbers are to be compared with the MMR value reached after 400 questions with the Pessimistic strategy (displayed in \cref{fig:linearity}), which is $0.6$; the Pessimistic strategy asks on average $48$ questions to the chair in this setting.
@@ -666,12 +621,12 @@ These numbers highlight that it is possible to obtain a good-quality recommendat
 \label{sec:conclusions}
 In this paper we have considered a social choice setting with partial information about the agent preferences and a partially specified voting rule.
 In this setting, we have proposed the use of minimax regret both as a means of robust winner determination as well as a guide to the process of simultaneous elicitation of preferences and voting rule.
-Our experimental results %on randomly generated and real world data sets 
+Our experimental results %on randomly generated and real world datasets 
 suggest that regret-based elicitation is effective and allows to quickly reduce worst-case regret significantly. They also show that, in our setting, good quality (low regret) recommendations can be achieved short of knowing the weights precisely or the profile completely.
 %regret, but they also show that starting with zero knowledge became a pretentious approach really quickly when increasing the size of the problem. Future works will therefore include the test of these strategies on partial specified profiles, ideally on real datasets. An other important direction is the extension to voting rules beyond scoring rules.
 %Regret-based elicitation allows to determine near-optimal winners using only few information about the agent preferences.
 
-As part of our contribution, a general open-source library, allowing to reproduce our experiments and perform many more, will be made publicly available.\footnote{URL not displayed for ensuring anonymity.}
+As part of our contribution, a general open-source library, allowing to reproduce our experiments and perform many more, will be made publicly available. (URL not displayed for ensuring anonymity.)
 %and serve as a basis for further research
 
 %We mention some directions for future works.
@@ -712,27 +667,6 @@ Finally, an important direction of research  aims at eliciting preferences while
 \section{Appendix}
 \label{sec:appendix}
 \newtheorem*{details*}{Strategy Details}
-\commentBN{delete all this}
-\begin{details*}[Pessimistic]
-	Given $j \in N^*$, if $x^*$ and $\bar{y}$ are incomparable in $\ppref_j$, the candidate question concerns the pair $(x^*, \bar{y})$, otherwise, the candidate question concerns the pair $(x^*, z)$ for some $z$ incomparable to $x^*$ (randomly chosen), or if none such $z$ exist, the pair $(\bar{y}, z)$ for some $z$ incomparable to $\bar{y}$, or, if both $x^*$ and $\bar{y}$ are comparable to every alternatives in $\ppref_j$, any incomparable pair is picked at random. 
-%Responses to questions involving $x^*$ or $\bar{y}$ constrain the ability of the adversary to complete the profile in such manner, possibly reducing minimax regret.
-	Once having selected $n + m$ candidate questions, the Pessimistic strategy selects the one that leads to minimal regret in the worst case, considering both possible answers to the question, and with penalty terms depending on the kind of question. To define this comparison precisely, assume that a question $q_1$ has type $t_1$ (being “chair” or “agent”), and leads to the new knowledge states $(\pprofile_1, W_1)$ if answered positively and $(\pprofile'_1, W'_1)$ if the answer is negative. 
-	Define $R^{\max}_1 = \max\set{\MMR(\pprofile_1, W_1), \MMR(\pprofile'_1, W'_1)}$
-	and $R^{\min}_1 = \min\set{\MMR(\pprofile_1, W_1), \MMR(\pprofile'_1, W'_1)} \epsilon_{t} + \epsilon'_{t}$.
-	%If $(\pprofile_1, W_1) ≥ (\pprofile'_1, W'_1)$, define $\MMR^{\max} = \MMR(\pprofile_1, W_1)$ and $\MMR^{\min} = \MMR(\pprofile'_1, W'_1)$; otherwise, define $\MMR^{\max} = \MMR(\pprofile'_1, W'_1)$ and $\MMR^{\min} = \MMR(\pprofile_1, W_1)$.
-	% and and $(\pprofile^\min_2, W^\min_2)$. numbering them so that $\MMR(\pprofile_1, W_1) ≥ \MMR(\pprofile_2, W_2)$. Then the badness of the question in the worst case is:
-	The terms $\epsilon_t$ and $\epsilon'_{t}$ are real numbers associated to the type $t$ of question; these parameters are to be determined experimentally and are used to fine control the choice of the question type.
-	Define similarly $t_2$, $R^{\max}_2$ and $R^{\min}_2$ for a question $q_2$.
-	We are now faced with the problem of aggregating these values in order to compare the informative values of the candidate questions. We adopt a pessimistic approach, reported to perform better than optimistic aggregation \citep{Cailloux2014}, although our experiments in this context suggested a weak impact of that choice on the performance of the strategy.
-	To avoid the absorption property of the max, we adopt $\leximax$ as an aggregator.
-	Pessimistic thus considers question $q_1$ to be better  than $q_2$ iff $R^{\max}_1 < R^{\max}_2 \text{ or } [R^{\max}_1 = R^{\max}_2 \text{ and } R^{\min}_1 < R^{\min}_2]$.
-	%This comparison gives a way of picking questions among a set of possible questions, by picking one that minimizes this approximate measure of minimax regret {\em a posteriori}. 
-	%The motivation for using this operator lies in 
-	In other words if the maximal {\em a posteriori} MMR of two questions are (nearly) equal, then it considers the (penalized) minimal MMR values, preferring the question with the lowest value.
-	(Technically, instead of applying a pure lexicographic aggregation, which is very sensitive to small errors due to floating-point computations, we apply a weighted sum between the maximal and the penalized minimal MMR values, with a predominant weight given to the maximal one, several order of magnitudes higher than the weight given to the penalized minimal MMR.)
-
-The penalty parameters for the Pessimistic and Extended pessimistic strategies are set to $\epsilon_{\text{chair}} = 1.1$, $\epsilon'_{\text{chair}} = 10^{-6}$, $\epsilon_{\text{agent}} = 1.0$ and $\epsilon'_{\text{agent}} = 0$.
-\end{details*}
 
 \begin{sketch*}[\cref{claim:completion}]
 	Consider our knowledge $\pprefeq_j$ about the preference of the agent $j$. 
@@ -777,30 +711,28 @@ The penalty parameters for the Pessimistic and Extended pessimistic strategies a
 	$s(c) ≤ (p + q) w_1 + (p + q) w_3 + (p + q) w_m$. It follows that $a$ or $b$ maximize $s$ (as $s(a) ≥ s(c)$). We conclude by observing that $a \in f(P) ⇔ s(a) ≥ s(b) ⇔ q w_r + p w_{r + 2} ≥ (p + q) w_{r + 1} ⇔ w_r - w_{r + 1} ≥ (p / q) (w_{r + 1} - w_{r + 2})$, and similarly for $b \in f(P)$.
 \end{proof*}
 
-\sisetup{table-number-alignment = center, table-figures-integer=2, table-figures-decimal=1, table-auto-round}
+
 \begin{table}
-	\caption{Average MMR in problems of size $(10, 20)$ after $k$ questions.}
-	\label{tab:biggerSize}
-	\begin{tabular}{S[table-figures-integer=3, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
+	\caption{Average number of questions asked to the chair (\textit{qstC}) and to the agents (\textit{qstV}) by Pessimistic strategy to reach zero regret on the datasets of \cref{fig:linearity}.}
+	\label{tab:questions}
+	\begin{tabular}{cS[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=2]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=2]}
 		\toprule
-		{k} & {Rnd.} & {sd} & {Pes.} & {sd} & {Eli.} & {sd} \\
+		{dataset} & {qstC} & {sd} & {qstV} & {sd} \\
 		\midrule
-		0 &20.0 & 0.0 & 20.0 & 0.0&  20.0 & 0.0 \\
-		50 & 19.82 & 0.04 &	15.59 &0.56	&17.38& 0.7\\
-		100 & 19.12	& 0.26&	11.91&	1.26 &15.23& 0.73\\
-		150 & 18.06	& 0.47&	8.92&	1.53 &13.38& 1.11\\
-		200 & 16.89	& 0.62&6.24&2.02&11.76& 1.03\\
-		250 & 15.63 & 0.84&	4.64&1.72&10.56& 0.89\\
-		300 & 14.72	& 0.94&	3.01& 1.35 &10.48& 0.87\\
-		350 & 13.41	& 1.15& 1.76& 0.95&10.48& 0.86\\
-		400 & 11.98	& 0.68&	0.62&0.56 &10.48& 0.86\\
+		m5n10 	&	8.4		& 2.67 		& 61		& 6.25\\
+		m5n20 	&	13.6	& 6.38		& 118.9		& 14.4\\
+		m10n20 	&	48.5	& 6			& 362.4		& 47.6	\\
+		m10n30 	&	56.3	& 11.18		& 598.1 	& 75.19	\\
+		m15n30 	&	24.5	& 8.77		& 775.5		& 8.77	\\
+		m14n9 	&	58.3	& 33.66		& 370.9		& 40.54	\\
+		m14n9-2 &	56.2	& 34.11		& 368.7		& 53.07 \\
+		skate 	&	0		& 0			& 103.3		& 2.21	\\
+		tshirt  &	30.0	& 5.87		& 961.2		& 23.04	\\
+		courses & 0			& 0			& 950		& 5.08	\\
+		
 		\bottomrule
 	\end{tabular}
 \end{table}
-\Cref{tab:biggerSize} shows that the conclusions of \cref{fig:smallSize} also hold for a problem of larger size ($m = 10, n = 20$), except that this table does not feature Extended pessimistic, which is too slow to be run repeatedly on such instance.
-
-
-
 
 
 
